add project describtions

--- a/dataset-1.ipynb
+++ b/dataset-1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The aim of this this assignment is to simulate tasks as a health data scientist for the National Institutes of Health (NIH) using the “little” Big Data techniques.\n",
+    "\n",
+    "The task is to perform data analysis and visualization on some key information about NIH grant funding given in a particular year. The data are stored in an excel file named “nih-Worldwide2015.xls”."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
