--- a/dataset-2.ipynb
+++ b/dataset-2.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply  Pandas and MongoDB skills to solve real-world data cleaning and wrangling problems for handling patient data.\n",
+    "\n",
+    "The dataset for this contains a MongoDB dump and two CSV files which will be used for the tasks in this notebook. More details about these can be found below.\n",
+    "\n",
+    "The task here is to collate data coming from three different sources and further perform analysis on data regarding COVID-19 patients."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
