--- a/dataset-3.ipynb
+++ b/dataset-3.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Apply PySpark skills to process data and perform predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Part 1:**"
    ]
   },
