--- a/dataset-4.ipynb
+++ b/dataset-4.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The state of Maryland is investigating the feasibility of providing some level of assistance in \n",
+    "healthcare needs of its older population. Obviously, due to budgetary constraints, they would \n",
+    "be unable to cover all the needs of each and every person. So, your company has been hired by \n",
+    "the state government to perform a study and identify where the state government could \n",
+    "provide assistance "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Analyze to assist in healthcare needs of its older population\n",
     "## Data Cleaning"
    ]
